Package_Tools/include-C/ode/h/collision_trimesh.h

#define _ODE_COLLISION_TRIMESH_H_
typedef struct dxTriMeshData* dTriMeshDataID;
/*
 * Per triangle callback. Allows the user to say if he wants a collision with
 * a particular triangle.
 */
typedef int (*dTriCallback)(dGeomID TriMesh, dGeomID RefObject, int TriangleIndex);
/*
 * Per object callback. Allows the user to get the list of triangles in 1
 * shot. Maybe we should remove this one.
 */
typedef void (*dTriArrayCallback)(dGeomID TriMesh, dGeomID RefObject, const int* TriIndices, int TriCount);
/*
 * Ray callback.
 * Allows the user to say if a ray collides with a triangle on barycentric
 * coords. The user can for example sample a texture with alpha transparency
 * to determine if a collision should occur.
 */
typedef int (*dTriRayCallback)(dGeomID TriMesh, dGeomID Ray, int TriangleIndex, dReal u, dReal v);
extern void dGeomTriMeshSetRayCallback(dGeomID g, dTriRayCallback* Callback);
extern dTriRayCallback* dGeomTriMeshGetRayCallback(dGeomID g);
/*
 * Triangle merging callback.
 * Allows the user to generate a fake triangle index for a new contact generated
 * from merging of two other contacts. That index could later be used by the 
 * user to determine attributes of original triangles used as sources for a 
 * merged contact.
 */
typedef int (*dTriTriMergeCallback)(dGeomID TriMesh, int FirstTriangleIndex, int SecondTriangleIndex);
extern void dGeomTriMeshSetTriMergeCallback(dGeomID g, dTriTriMergeCallback* Callback);
extern dTriTriMergeCallback* dGeomTriMeshGetTriMergeCallback(dGeomID g);
/*
 * Trimesh class
 * Construction. Callbacks are optional.
 */
extern dGeomID dCreateTriMesh(dSpaceID space, dTriMeshDataID Data, dTriCallback* Callback, dTriArrayCallback* ArrayCallback, dTriRayCallback* RayCallback);
extern void dGeomTriMeshSetData(dGeomID g, dTriMeshDataID Data);
extern dTriMeshDataID dGeomTriMeshGetData(dGeomID g);
/* enable/disable/check temporal coherence*/
extern void dGeomTriMeshEnableTC(dGeomID g, int geomClass, int enable);
extern int dGeomTriMeshIsTCEnabled(dGeomID g, int geomClass);
/*
 * Clears the internal temporal coherence caches. When a geom has its
 * collision checked with a trimesh once, data is stored inside the trimesh.
 * With large worlds with lots of seperate objects this list could get huge.
 * We should be able to do this automagically.
 */
extern void dGeomTriMeshClearTCCache(dGeomID g);
/*
 * returns the TriMeshDataID
 */
extern dTriMeshDataID dGeomTriMeshGetTriMeshDataID(dGeomID g);
/*
 * Gets a triangle.
 */
extern void dGeomTriMeshGetTriangle(dGeomID g, int Index, dVector3* v0, dVector3* v1, dVector3* v2);
/*
 * Gets the point on the requested triangle and the given barycentric
 * coordinates.
 */
extern void dGeomTriMeshGetPoint(dGeomID g, int Index, dReal u, dReal v, dVector3 Out);
/*

This is how the strided data works:

struct StridedVertex{
	dVector3 Vertex;
	// Userdata
};
int VertexStride = sizeof(StridedVertex);

struct StridedTri{
	int Indices[3];
	// Userdata
};
int TriStride = sizeof(StridedTri);

*/


extern int dGeomTriMeshGetTriangleCount (dGeomID g);
extern void dGeomTriMeshDataUpdate(dTriMeshDataID g);