Package_Tools/include-C/ode/collision_trimesh.pp


procedure dGeomTriMeshSetRayCallback(g:TdGeomID; Callback:PdTriRayCallback);cdecl;external;
function dGeomTriMeshGetRayCallback(g:TdGeomID):PdTriRayCallback;cdecl;external;
{
 * Triangle merging callback.
 * Allows the user to generate a fake triangle index for a new contact generated
 * from merging of two other contacts. That index could later be used by the 
 * user to determine attributes of original triangles used as sources for a 
 * merged contact.
  }
type

  TdTriTriMergeCallback = function (TriMesh:TdGeomID; FirstTriangleIndex:longint; SecondTriangleIndex:longint):longint;cdecl;

procedure dGeomTriMeshSetTriMergeCallback(g:TdGeomID; Callback:PdTriTriMergeCallback);cdecl;external;
function dGeomTriMeshGetTriMergeCallback(g:TdGeomID):PdTriTriMergeCallback;cdecl;external;
{
 * Trimesh class
 * Construction. Callbacks are optional.
  }
function dCreateTriMesh(space:TdSpaceID; Data:TdTriMeshDataID; Callback:PdTriCallback; ArrayCallback:PdTriArrayCallback; RayCallback:PdTriRayCallback):TdGeomID;cdecl;external;
procedure dGeomTriMeshSetData(g:TdGeomID; Data:TdTriMeshDataID);cdecl;external;
function dGeomTriMeshGetData(g:TdGeomID):TdTriMeshDataID;cdecl;external;
{ enable/disable/check temporal coherence }
procedure dGeomTriMeshEnableTC(g:TdGeomID; geomClass:longint; enable:longint);cdecl;external;
function dGeomTriMeshIsTCEnabled(g:TdGeomID; geomClass:longint):longint;cdecl;external;
{
 * Clears the internal temporal coherence caches. When a geom has its
 * collision checked with a trimesh once, data is stored inside the trimesh.
 * With large worlds with lots of seperate objects this list could get huge.
 * We should be able to do this automagically.
  }
procedure dGeomTriMeshClearTCCache(g:TdGeomID);cdecl;external;
{
 * returns the TriMeshDataID
  }
function dGeomTriMeshGetTriMeshDataID(g:TdGeomID):TdTriMeshDataID;cdecl;external;
{
 * Gets a triangle.
  }
procedure dGeomTriMeshGetTriangle(g:TdGeomID; Index:longint; v0:PdVector3; v1:PdVector3; v2:PdVector3);cdecl;external;
{
 * Gets the point on the requested triangle and the given barycentric
 * coordinates.
  }
procedure dGeomTriMeshGetPoint(g:TdGeomID; Index:longint; u:TdReal; v:TdReal; Out:TdVector3);cdecl;external;
{

This is how the strided data works:

struct StridedVertex
	dVector3 Vertex;
	// Userdata
;
int VertexStride = sizeof(StridedVertex);

struct StridedTri
	int Indices[3];
	// Userdata
;
int TriStride = sizeof(StridedTri);

 }
function dGeomTriMeshGetTriangleCount(g:TdGeomID):longint;cdecl;external;
procedure dGeomTriMeshDataUpdate(g:TdTriMeshDataID);cdecl;external;
{ C++ end of extern C conditionnal removed }
{$endif}
{ _ODE_COLLISION_TRIMESH_H_  }

implementation


end.
